# AgentControl

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  MANIFEST.in  Makefile  PLAN_HEART_META.txt  README.md  agentcall.yaml  agentcontrol.project.json  architecture_plan.md  pyproject.toml  requirements.txt  todo.machine.md  todo.md  workspace.yaml
.agentcontrol/: agentcontrol.project.json  template.json  template.sha256
architecture/: manifest.yaml
config/: agents.json  commands.sh  tasks.provider.json
data/: tasks.board.json
docs/: changes.md  getting_started.md  plugins.md  release.md  terms.md
docs/adr/: index.md  (+3 more)
examples/: site-html-landing.html
examples/plugins/agentcontrol-hello-plugin/: README.md  pyproject.toml
examples/plugins/agentcontrol-hello-plugin/src/agentcontrol_hello_plugin/: __init__.py  plugin.py
reports/: architecture-dashboard.json  verify.json
sbom/: python.json
scripts/: agent-cycle.sh  arch.sh  check-extension-integrity.py  check-legacy-pipelines.py  check-lock.sh  check-make-alignment.py  check-template-integrity.py  check_hint_docs.py  doctor.sh  generate-agent-digest.py  init.sh  install_agentcontrol.sh  progress.py  release.sh  review.sh  roadmap-status.sh  scan-sbom.sh  sdk.py  setup.sh  ship.sh  status.sh  sync-architecture.sh  sync-roadmap.sh  task.sh  test-place.sh  update-lock.sh  verify.sh
src/agentcontrol/resources/gallery/python_minimal/: README.md  pyproject.toml
src/agentcontrol/resources/gallery/python_minimal/src/: app.py
templates/: adr.md.gotmpl  dashboard.json.gotmpl  rfc.md.gotmpl  task.md.gotmpl
tests/: conftest.py  test_agents_auth.py  test_agents_context.py  test_agents_tools.py  test_architecture_tool_docs.py  test_auto_detect.py  test_deps_checker.py  test_doc_bridge.py  test_docs_operations.py  test_docs_service.py  test_heart_engine.py  test_progress_pipeline.py  test_quality_guard.py  test_roadmap_view.py
(+411 files in other folders)
